# droidpad

./: README_.md
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/droidpad/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/caffe/: CMakeLists.txt  blob.cpp  common.cpp  internal_thread.cpp  layer_factory.cpp  net.cpp  syncedmem.cpp
Android/app/src/main/cpp/caffe/include/caffe/: common.hpp  layer.hpp  syncedmem.hpp
Android/app/src/main/cpp/caffe/include/caffe/layers/: base_conv_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  batch_reindex_layer.hpp  bias_layer.hpp  clip_layer.hpp  crop_layer.hpp  dropout_layer.hpp  eltwise_layer.hpp  elu_layer.hpp  embed_layer.hpp  euclidean_loss_layer.hpp  exp_layer.hpp  filter_layer.hpp  im2col_layer.hpp  inner_product_layer.hpp  log_layer.hpp  lrn_layer.hpp  pooling_layer.hpp  power_layer.hpp  prelu_layer.hpp  recurrent_layer.hpp  reduction_layer.hpp  relu_layer.hpp  reshape_layer.hpp  scale_layer.hpp  sigmoid_cross_entropy_loss_layer.hpp  sigmoid_layer.hpp  silence_layer.hpp  slice_layer.hpp  softmax_layer.hpp  softmax_loss_layer.hpp  split_layer.hpp  swish_layer.hpp  tanh_layer.hpp  threshold_layer.hpp  tile_layer.hpp
Android/app/src/main/cpp/caffe/include/caffe/util/: math_functions.hpp
Android/app/src/main/cpp/caffe/layers/: accuracy_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  batch_norm_layer.cpp  clip_layer.cpp  crop_layer.cpp  deconv_layer.cpp  eltwise_layer.cpp  euclidean_loss_layer.cpp  filter_layer.cpp  inner_product_layer.cpp  lstm_unit_layer.cpp  mvn_layer.cpp  pooling_layer.cpp  power_layer.cpp  prelu_layer.cpp  recurrent_layer.cpp  reduction_layer.cpp  relu_layer.cpp  scale_layer.cpp  sigmoid_cross_entropy_loss_layer.cpp  sigmoid_layer.cpp  silence_layer.cpp  slice_layer.cpp  softmax_layer.cpp  softmax_loss_layer.cpp  swish_layer.cpp
Android/app/src/main/cpp/caffe/util/: math_functions.cpp
Android/app/src/main/cpp/zinnia/: CMakeLists.txt  character.cpp  feature.cpp  libzinnia.cpp  recognizer.cpp  sexp.cpp
Android/app/src/main/cpp/zinnia/include/: mmap.h  zinnia.h
Android/app/src/main/java/com/droidpad/: AIWriteFragment.java  AdbSocketProducer.java  AnimUtil.java  CaffeCVMat.java  CaffeEngine.java  CaffeRecognizer.java  Constants.java  DPServiceHandler.java  DroidPadApp.java  DroidPadService.java  IDPEngineStateCallback.java  IDPServiceStateCallback.java  IMEFakeView.java  IMEWriteFragment.java  IRecognizerCallback.java  MainActivity.java  Packet.java  SocketConnection.java  SocketThreadBase.java  UIHandler.java  Util.java  WifiSocketProducer.java  WordComposer.java  WritePanel.java
Android/app/src/main/jni/: CMakeLists.txt  caffe_classifier.cpp  caffe_classifier.h  native-lib.cpp
Android/app/src/main/res/drawable/: btn_composer.xml  btn_composer_0.xml  composer_bg.xml  panel_stroked_background.xml  usb_anim.xml  wifi_anim.xml
Android/app/src/main/res/layout/: activity_main.xml  compose_button.xml  fragment_ai_write.xml  fragment_ime_write.xml  init_view.xml
Android/app/src/main/res/layout-land/: activity_main.xml  fragment_ai_write.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Android/app/src/test/java/com/droidpad/: ExampleUnitTest.java
Android/captures/: com.droidpad_2019.01.31_23.16.li  com.droidpad_2019.01.31_23.17.li  com.droidpad_2019.03.11_18.48.li  com.droidpad_2019.03.11_18.52.li
Android/gradle/wrapper/: gradle-wrapper.properties
models/: deploy.prototxt  han_mean.binaryproto  lable_to_code.txt  solver.prototxt  train_val.prototxt
windows/: DroidPad.sln
windows/DroidPad/: DroidPad.vcxproj  DroidPad.vcxproj.filters  ReadMe.txt
windows/DroidPadIME/: DroidPadIME.aps  DroidPadIME.rc  DroidPadIME.vcxproj  DroidPadIME.vcxproj.filters  ReadMe.txt  resource.h
windows/SetupFiles/: DroidPadIME_Win32.ime  DroidPadIME_x64.ime  setup.cmd
windows/include/: SecurityAttribute.h  VersionHelpers.h  auto_lock.h  channel.h  common.h  image_cache.h  ime_interface.h  ime_status_bar.h  ipc_thread.h  memory_control.h  mime.h  msg_queue.h  native_client.h  native_client_pool.h  net_monitor.h  packet.h  phone_detector.h  remote_client.h  resource.h  socket_connection.h  thread_base.h  util.h  writing_pad_service.h
windows/include/zlib/: iowin32.h  unzip.h
windows/libs/x64/: zlibwapi.lib  zlibwapid.lib
windows/libs/x86/: zlibwapi.lib  zlibwapid.lib
windows/src/: SecurityAttribute.cpp  channel.cpp  dllmain.cpp  droidpad.cpp  droidpad.def  image_cache.cpp  ime_status_bar.cpp  ipc_thread.cpp  main.cpp  memory_control.cpp  msg_queue.cpp  native_client.cpp  native_client_pool.cpp  net_monitor.cpp  packet.cpp  phone_detector.cpp  remote_client.cpp  socket_connection.cpp  thread_base.cpp  ui_window.cpp  util.cpp  writing_pad_service.cpp
